--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Chris Diorio - Portfolio - Home</title>
+        <title>Chris Diorio - Portfolio - Projects</title>
     </head>
     <body>
         <h1>Under construction!</h1>
