Set up home skelleton

--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Chris Diorio - Portfolio - Home</title>
+        <title>Chris Diorio - Portfolio</title>
     </head>
     <body>
-        <h1>Under construction!</h1>
+        <header>
+            <h1>Chris Diorio</h1>
+        </header>
+        <main>
+            <p>Welcome to the portfolio site of Chris Diorio. Feel free to browse around to learn more about me and my work.</p>
+        </main>
+        <nav>
+            <ul>
+                <li class="main-menu"><a href="about.html">About Me</a></li>
+                <li class="main-menu"><a href="skills.html">Skills</a></li>
+                <li class="main-menu"><a href="projects.html">Projects</a></li>
+                <li class="main-menu"><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </body>
 </html>
