Begin home css styling.

--- a/index.html
+++ b/index.html
@@ -2,21 +2,32 @@
 <html>
     <head>
         <title>Chris Diorio - Portfolio</title>
+        <link rel="stylesheet" href="resources/styles/style.css">
     </head>
     <body>
         <header>
             <h1>Chris Diorio</h1>
         </header>
         <main>
-            <p>Welcome to the portfolio site of Chris Diorio. Feel free to browse around to learn more about me and my work.</p>
+            <div class="home-intro">
+                <p>Welcome to the portfolio site of Chris Diorio. Feel free to browse around to learn more about me and my work.</p>
+            </div>
         </main>
-        <nav>
-            <ul>
-                <li class="main-menu"><a href="about.html">About Me</a></li>
-                <li class="main-menu"><a href="skills.html">Skills</a></li>
-                <li class="main-menu"><a href="projects.html">Projects</a></li>
-                <li class="main-menu"><a href="contact.html">Contact</a></li>
-            </ul>
+        <nav class="main-menu">
+            <div class="menu-items">
+                <ul class="images">
+                    <li><img src="resources/images/AboutMe_PIX.png"></li>
+                    <li><img src="resources/images/Skill_PIX.png"></li>
+                    <li><img src="resources/images/Projects_PIX.png"></li>
+                    <li><img src="resources/images/Contact_PIX.png"></li>
+                </ul>
+                <ul class="buttons">
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="skills.html">Skills</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
         </nav>
     </body>
 </html>
