Change menu style to table. Begin styling

--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
             </div>
         </main>
         <nav class="main-menu">
-            <div class="menu-items">
-                <ul class="images">
-                    <li><img src="resources/images/AboutMe_PIX.png"></li>
-                    <li><img src="resources/images/Skill_PIX.png"></li>
-                    <li><img src="resources/images/Projects_PIX.png"></li>
-                    <li><img src="resources/images/Contact_PIX.png"></li>
-                </ul>
-                <ul class="buttons">
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="skills.html">Skills</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </div>
+            <table class="menu-items">
+                <tr class="images">
+                    <td><img src="resources/images/AboutMe_PIX.png"></td>
+                    <td><img src="resources/images/Skill_PIX.png"></td>
+                    <td><img src="resources/images/Projects_PIX.png"></td>
+                    <td><img src="resources/images/Contact_PIX.png"></td>
+                </tr>
+                <tr class="buttons">
+                    <td><a href="about.html">About</a></td>
+                    <td><a href="skills.html">Skills</a></td>
+                    <td><a href="projects.html">Projects</a></td>
+                    <td><a href="contact.html">Contact</a></td>
+                </tr>
+            </table>
         </nav>
     </body>
 </html>
