Setup ids for menu links for JS

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                     <td><img src="resources/images/Contact_PIX.png"></td>
                 </tr>
                 <tr class="buttons">
-                    <td><a href="about.html">About</a></td>
-                    <td><a href="skills.html">Skills</a></td>
-                    <td><a href="projects.html">Projects</a></td>
-                    <td><a href="contact.html">Contact</a></td>
+                    <td id="about-link"><a href="about.html">About</a></td>
+                    <td id="skills-link"><a href="skills.html">Skills</a></td>
+                    <td id="projects-link"><a href="projects.html">Projects</a></td>
+                    <td id="contact-link"><a href="contact.html">Contact</a></td>
                 </tr>
             </table>
         </nav>
