--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <title>Chris Diorio - Portfolio</title>
         <link rel="stylesheet" href="resources/styles/style.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.js"></script>
+        <script id="popup" type='text/x-handlebars-template'>
+            <p>{{greeting}}</p>
+        </script>
     </head>
     <body>
         <header>
@@ -29,5 +33,10 @@
                 </tr>
             </table>
         </nav>
+        <section>
+            <div id="description">
+            </div>
+        </section>
+        <script src="resources/js/script.js" type="text/javascript"></script>
     </body>
 </html>
