Setup JS for enter/exit hover on menu items

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <nav class="main-menu">
             <table class="menu-items">
                 <tr class="images">
-                    <td><img src="resources/images/AboutMe_PIX.png"></td>
-                    <td><img src="resources/images/Skill_PIX.png"></td>
-                    <td><img src="resources/images/Projects_PIX.png"></td>
-                    <td><img src="resources/images/Contact_PIX.png"></td>
+                    <td><img id="about-img" src="resources/images/AboutMe_PIX.png"></td>
+                    <td><img id="skill-img" src="resources/images/Skill_PIX.png"></td>
+                    <td><img id="projects-img" src="resources/images/Projects_PIX.png"></td>
+                    <td><img id="contact-img" src="resources/images/Contact_PIX.png"></td>
                 </tr>
                 <tr class="buttons">
                     <td id="about-link"><a href="about.html">About</a></td>
