Home page: Icon interactivity implemented

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                     <td><img id="contact-img" src="resources/images/Contact_PIX.png"></td>
                 </tr>
                 <tr class="buttons">
-                    <td id="about-link"><a href="about.html">About</a></td>
-                    <td id="skills-link"><a href="skills.html">Skills</a></td>
-                    <td id="projects-link"><a href="projects.html">Projects</a></td>
-                    <td id="contact-link"><a href="contact.html">Contact</a></td>
+                    <td><a id="about-link" href="about.html">About</a></td>
+                    <td><a id="skills-link" href="skills.html">Skills</a></td>
+                    <td><a id="projects-link" href="projects.html">Projects</a></td>
+                    <td><a id="contact-link" href="contact.html">Contact</a></td>
                 </tr>
             </table>
         </nav>
