--- a/projects.html
+++ b/projects.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <h1>Under construction!</h1>
+        <a href="index.html">&larr; Back to home</a>
     </body>
 </html>
