--- a/projects.html
+++ b/projects.html
@@ -2,9 +2,20 @@
 <html>
     <head>
         <title>Chris Diorio - Portfolio - Projects</title>
+        <link rel="stylesheet" href="resources/styles/style.css">
     </head>
     <body>
-        <h1>Under construction!</h1>
-        <a href="index.html">&larr; Back to home</a>
+        <nav class="global">
+            <ul>
+                <li style="float:left"><h1>Chris Diorio</h1></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li class="active"><a href="#">Projects</a></li>
+                <li><a href="skills.html">Skills</a></li>
+                <li><a href="about.html">About</a></li>  
+            </ul>
+        </nav>
+        <main class="content">
+            <h1>Under construction!</h1>
+        </main>
     </body>
 </html>
