Refactor Skills layoyt

--- a/skills.html
+++ b/skills.html
@@ -14,8 +14,21 @@
                 <li><a href="about.html">About</a></li>  
             </ul>
         </nav>
-        <main class="content">
-            <h2>Under construction!</h2>
+        <main class="resume">
+            <h2>Education</h2>
+            <img src="resources/images/skills/RPI.png" style="height:180px;">
+            <img src="resources/images/skills/uw.png">
+            <p>RPI Description</p>
+            <p>UW-Madison Description</p>
+            <h2>Work History</h2>
+            <p>CFYE Image</p>
+            <p>Raven Image</p>
+            <p>CFYE Desc</p>
+            <p>Raven Desc</p>
+            <h2>Skills</h2>
+            <div class="skillImg">
+                <p>Images of programs</p>
+            </div>
         </main>
     </body>
 </html>
