Add images for skills page

--- a/skills.html
+++ b/skills.html
@@ -21,13 +21,18 @@
             <p>RPI Description</p>
             <p>UW-Madison Description</p>
             <h2>Work History</h2>
-            <p>CFYE Image</p>
-            <p>Raven Image</p>
+            <img src="resources/images/skills/uw.png">
+            <img src="resources/images/skills/raven.png" style="height:180px;">
             <p>CFYE Desc</p>
             <p>Raven Desc</p>
             <h2>Skills</h2>
             <div class="skillImg">
-                <p>Images of programs</p>
+                <img src="resources/images/skills/HTML5.png">
+                <img src="resources/images/skills/css.png">
+                <img src="resources/images/skills/js.png">
+                <img src="resources/images/skills/python.png">
+                <img src="resources/images/skills/nodejs.png">
+                <img src="resources/images/skills/unreal.png">
             </div>
         </main>
     </body>
