Add education to Skills page

--- a/skills.html
+++ b/skills.html
@@ -18,8 +18,20 @@
             <h2>Education</h2>
             <img src="resources/images/skills/RPI.png" style="height:180px;">
             <img src="resources/images/skills/uw.png">
-            <p>RPI Description</p>
-            <p>UW-Madison Description</p>
+            <div>
+                <h3>Rensselaer Polytechnic Institute</h3>
+                <p><em>Graduated May 2012 (both degrees)</em></p>
+                <p>Bachelor's of Science - Games and Simulation Arts and Sciences</p>
+                <p>Master's of Science - Human-Computer Interaction</p>
+                <p><a href="https://www.rpi.edu" target="_blank">School Website</a>&nbsp;|&nbsp;<a href="https://hass.rpi.edu/games-and-simulation-arts-and-sciences/games-and-simulation-arts-and-sciences" target="_blank">GSAS Program</a></p>
+            </div>
+            <div>
+                <h3>University of Wisconsin Madison</h3>
+                <p><em>Graduated August 2020</em></p>
+                <p>Graduate Capstone Certificate - User Experience Design</p>
+                <p>&nbsp;</p>
+                <p><a href="https://www.wisc.edu/" target="_blank">School Website</a>&nbsp;|&nbsp;<a href="http://hci.wisc.edu/madux/" target="_blank">MadUX Program</a></p>
+            </div>
             <h2>Work History</h2>
             <img src="resources/images/skills/uw.png">
             <img src="resources/images/skills/raven.png" style="height:180px;">
