Add work history to skills page

--- a/skills.html
+++ b/skills.html
@@ -26,7 +26,7 @@
                 <p><a href="https://www.rpi.edu" target="_blank">School Website</a>&nbsp;|&nbsp;<a href="https://hass.rpi.edu/games-and-simulation-arts-and-sciences/games-and-simulation-arts-and-sciences" target="_blank">GSAS Program</a></p>
             </div>
             <div>
-                <h3>University of Wisconsin Madison</h3>
+                <h3>University of Wisconsin - Madison</h3>
                 <p><em>Graduated August 2020</em></p>
                 <p>Graduate Capstone Certificate - User Experience Design</p>
                 <p>&nbsp;</p>
@@ -35,8 +35,18 @@
             <h2>Work History</h2>
             <img src="resources/images/skills/uw.png">
             <img src="resources/images/skills/raven.png" style="height:180px;">
-            <p>CFYE Desc</p>
-            <p>Raven Desc</p>
+            <div>
+                <h3>UW-Madison | Center for the First-Year Experience</h3>
+                <p><em>September 2018 - Present</em></p>
+                <p>Coordinator of First-Year Technology and Applications</p>
+                <p><a href="https://newstudent.wisc.edu/" target="_blank">Company Website</a></p>
+            </div>
+            <div>
+                <h3>Raven Software</h3>
+                <p><em>April 2014 - March 2018</em></p>
+                <p>Senior Quality Assurance Tester</p>
+                <p><a href="https://www.ravensoftware.com/home" target="_blank">Company Website</a></p>
+            </div>
             <h2>Skills</h2>
             <div class="skillImg">
                 <img src="resources/images/skills/HTML5.png">
