Add content to projects page

--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,19 @@
             </ul>
         </nav>
         <main class="content">
-            <h2>Under construction!</h2>
+            <h2>Madison Audition Hub</h2>
+            <img src="resources/images/projects/MAHLogo.png" style="height: 300px;">
+            <div>
+                <p>A year-long project as part of UW-Madison’s <a href="http://hci.wisc.edu/madux/" target="_blank">User Experience Graduate Design Capstone Certificate</a>. This page includes the process from ideation, to prototyping, to testing.</p>
+                <p><a href="projects/madauditionhub.html">View Project</a></p>
+            </div>
+            <h2>Portfolio Website</h2>
+            <div>
+                <p>This project is part of Codecademy's <a href="https://www.codecademy.com/learn/paths/full-stack-engineer-career-path" target="_blank">Full-Stack</a> and <a href="https://www.codecademy.com/learn/paths/front-end-engineer-career-path" target="_blank">Front-End</a> Engineer career paths. The simple project is meant to give practice in HTML, CSS, JavaScript, Version Control (GitHub), and command line.</p>
+                <p><a href="https://github.com/PupRiku/PortfolioWebsite/">View GitHub Repository</a></p>
+            </div>
+            <img src="resources/images/projects/portfolio.JPG" style="height: 300px;">
+            <h2>More to come...</h2>
         </main>
     </body>
 </html>
