--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
             <h2>Portfolio Website</h2>
             <div>
                 <p>This project is part of Codecademy's <a href="https://www.codecademy.com/learn/paths/full-stack-engineer-career-path" target="_blank">Full-Stack</a> and <a href="https://www.codecademy.com/learn/paths/front-end-engineer-career-path" target="_blank">Front-End</a> Engineer career paths. The simple project is meant to give practice in HTML, CSS, JavaScript, Version Control (GitHub), and command line.</p>
-                <p><a href="https://github.com/PupRiku/PortfolioWebsite/">View GitHub Repository</a></p>
+                <p><a href="https://github.com/PupRiku/PortfolioWebsite/" target="_blank">View GitHub Repository</a></p>
             </div>
             <img src="resources/images/projects/portfolio.JPG" style="height: 300px;">
             <h2>More to come...</h2>
