Add content for Madison Audition Hub project

--- a/projects/madauditionhub.html
+++ b/projects/madauditionhub.html
@@ -14,8 +14,42 @@
                 <li><a href="../about.html">About</a></li>  
             </ul>
         </nav>
-        <main class="content">
-            <h2>Under Construction!</h2>
+        <main class="auditionHub">
+            <h2>The Madison Audition Hub</h2>
+            <div class="subtitle">
+                <p><em>Capstone Project - User Experience Design Graduate Certificate - University of Wisconsin - Madison - September 2019-August 2020</em></p>
+            </div>
+            <p class="projDescription">The Madison Audition Hub is a new digital portal for Madison and Madison-area community theater performers who can search and register for auditions in the area. The site gives a single, accessible place to find exactly the info they are looking for in an audition listing. It will allow performers to save their information, relieving the monotony of filling out the same information for each separate audition. Additionally, it gives production companies a digital place to promote auditions, collect audition forms, and see how many people have registered. In this way, it provides a more sustainable approach to run auditions, giving an accurate count of interest, reducing the need for paper, and reducing the human error caused by handwriting.</p>
+            <h3>Design Brief</h3>
+            <img src="../resources/images/projects/auditionHub/persona.jpg">
+            <div>
+                <p><a href="../resources/files/projects/CS611_FINAL_DesignBrief_DIORIO.pdf" target="_blank">Design Brief Document</a> | Includes:</p>
+                <ul>
+                    <li>Competitive Analysis</li>
+                    <li>User Research Interviews and Surveys</li>
+                    <li>Personas</li>
+                    <li>User Journey Map</li>
+                </ul>
+            </div>
+            <h3>Ideation, Design, and Iteration</h3>
+            <img src="../resources/images/projects/auditionHub/lofi.jpg">
+            <div>
+                <p>Files available to view:</p>
+                <ul>
+                    <li><a href="../resources/files/projects/Processbook_Diorio.pdf" target="_blank">Full Processbook</a></li>
+                    <li><a href="../resources/files/projects/Ideation_Sketching_ConceptualDesign_Diorio.pdf" target="_blank">Ideation, Sketching, and Conceptual Design</a></li>
+                    <li><a href="../resources/files/projects/Visual_Design_Exploration_Diorio.pdf" target="_blank">Visual Design Exploration</a></li>
+                    <li><a href="../resources/files/projects/Design_Iteration_Diorio.pdf" target="_blank">Design Iterations</a></li>
+                    <li><a href="../resources/files/projects/Structure_Navigation_Diorio.pdf" target="_blank">Structure &amp; Navigation</a></li>
+                    <li><a href="../resources/files/projects/Prototyping_Diorio.pdf" target="_blank">Prototyping</a></li>
+                </ul>
+            </div>
+            <h3>Hi-Fi Prototype</h3>
+            <img src="../resources/images/projects/auditionHub/hifi.jpg">
+            <img src="../resources/images/projects/auditionHub/hifi2.jpg">
+            <h3>User Testing</h3>
+            <img src="../resources/images/projects/auditionHub/results.jpg">
+            <p><a href="../resources/files/projects/Final_Evaluation_Project_Report_Diorio.pdf" target="_blank">User Testing Evaluation</a></p>
         </main>
     </body>
 </html>
