Add contact me content

--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,14 @@
                 <li><a href="about.html">About</a></li>  
             </ul>
         </nav>
-        <main class="content">
-            <h2>Under construction!</h2>
+        <main class="contactInfo">
+            <h2>Contact Me!</h2>
+            <a href="https://twitter.com/PupRiku" target="_blank"><img src="resources/images/contact/twitter.png"></a>
+            <a href="https://github.com/PupRiku" target="_blank"><img src="resources/images/contact/github.png"></a>
+            <a href="mailto:chris.diorio12@gmail.com" target="_blank"><img src="resources/images/contact/email.png"></a>
+            <p><a href="https://twitter.com/PupRiku" target="_blank">@pupriku</a></p>
+            <p><a href="https://github.com/PupRiku" target="_blank">github.com/PupRiku</a></p>
+            <p><a href="mailto:chris.diorio12@gmail.com" target="_blank">chris.diorio12@gmail.com</a></p>
         </main>
     </body>
 </html>
